Replaced LinkedList with WrapList and ArrayList. All polygon representation is done with WrapLists now.